--- a/i3/config
+++ b/i3/config
@@ -60,7 +60,7 @@ bindsym $mod+d exec dmenu_run
 # change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
-bindsym $mod+Alt+l focus up
+bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
@@ -178,7 +178,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-bindsym $mod+l exec "i3lock -c 313131 -n"
+bindsym $mod+t exec "i3lock -c 313131 -n"
 bindsym $mod+q exec "qq"
 
 exec_always --no-startup-id variety
@@ -194,6 +194,9 @@ smart_gaps on
 
 hide_edge_borders none
 
+gaps inner 17
+gaps outer -2
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
@@ -201,5 +204,3 @@ bar {
 	status_command polybar bar1
 }
 
-gaps inner 17
-gaps outer -2
