--- a/i3/config
+++ b/i3/config
@@ -181,6 +181,7 @@ bindsym $mod+r mode "resize"
 
 bindsym $mod+t exec "i3lock -c 313131 -n"
 bindsym $mod+q exec "qq"
+bindsym $mod+p exec "deepin-screenshot"
 
 exec_always --no-startup-id variety
 exec_always picom -o 0.95 -i 0.88 --detect-rounded-corners --vsync --blur-background-fixed -f -D 5 -cC -b
@@ -200,8 +201,8 @@ gaps outer -2
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
+#bar {
         #status_command i3status
-	status_command polybar bar1
-}
+#	status_command polybar bar1
+#}
 
