--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -402,10 +402,10 @@ map <INSERT>   console touch%space
 
 
 # VIM-like
-copymap <UP>       u
-copymap <DOWN>     e
-copymap <LEFT>     n
-copymap <RIGHT>    i
+copymap <UP>       i
+copymap <DOWN>     k
+copymap <LEFT>     j
+copymap <RIGHT>    l
 copymap <HOME>     gg
 copymap <END>      G
 map E move down=5
@@ -436,7 +436,7 @@ map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.
 #map cW console bulkrename
 map a  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
-map k  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
+#map k  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
 
 map pp paste
 map po paste overwrite=True
