--- a/i3/config
+++ b/i3/config
@@ -186,7 +186,7 @@ bindsym $mod+Ctrl+e exec "dde-file-manager"
 #exec_always sleep 2; fcitx
 #exec_always /usr/lib/gsd-xsettings
 #exec_always killall i3bar; killall polybar; polybar bar1
-#exec_always xmodmap ~/.xmodmap
+exec_always xmodmap ~/.xmodmap
 exec ~/scripts/i3/autostart.sh
 
 new_window pixel
