--- a/i3/config
+++ b/i3/config
@@ -181,12 +181,16 @@ bindsym $mod+r mode "resize"
 bindsym $mod+t exec "i3lock -c 313131 -n"
 bindsym $mod+p exec "deepin-screenshot"
 bindsym $mod+Ctrl+e exec "dde-file-manager"
+
+bindsym $mod+Shift+d exec "xmodmap ~/.xmodmap-qwerty"
+bindsym $mod+Shift+o exec "xmodmap ~/.xmodmap-colemak"
+
 #exec_always --no-startup-id variety
 #exec_always picom -o 0.95 -i 0.88 --detect-rounded-corners --vsync --blur-background-fixed -f -D 5 -cC -b
 #exec_always sleep 2; fcitx
 #exec_always /usr/lib/gsd-xsettings
 #exec_always killall i3bar; killall polybar; polybar bar1
-exec_always xmodmap ~/.xmodmap
+exec xmodmap ~/.xmodmap
 exec ~/scripts/i3/autostart.sh
 
 new_window pixel
