updated some config

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -550,8 +550,8 @@ tmap <pageup>    taskview_move up=1.0    pages=True
 #tmap <C-d>       taskview_move down=0.5  pages=True
 #tmap <C-u>       taskview_move up=0.5    pages=True
 
-copytmap <UP>       u
-copytmap <DOWN>     e
+copytmap <UP>       i
+copytmap <DOWN>     k
 copytmap <HOME>     gg
 copytmap <END>      G
 copytmap <PAGEDOWN> <C-E>
