--- a/ranger/rc-sample.conf
+++ b/ranger/rc-sample.conf
@@ -397,17 +397,17 @@ map <CR>       move right=1
 map <INSERT>   console touch%space
 
 # VIM-like
-copymap <UP>       u
-copymap <DOWN>     e
-copymap <LEFT>     n
-copymap <RIGHT>    i
+copymap <UP>       i
+copymap <DOWN>     k
+copymap <LEFT>     j
+copymap <RIGHT>    l
 copymap <HOME>     gg
 copymap <END>      G
 copymap <PAGEDOWN> <C-F>
 copymap <PAGEUP>   <C-B>
 
-map J  move down=0.5  pages=True
-map K  move up=0.5    pages=True
+map K  move down=0.5  pages=True
+map I  move up=0.5    pages=True
 copymap J <C-D>
 copymap K <C-U>
 
