ranger config reset

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -313,8 +313,8 @@ map <C-c> abort
 map <esc> change_mode normal
 map ` set viewmode!
 
-map <c-e> scroll_preview 5
-map <c-u> scroll_preview -5
+map <c-k> scroll_preview 5
+map <c-i> scroll_preview -5
 #map ? help
 map W display_log
 map w taskview_open
@@ -366,8 +366,8 @@ map gfm cd ~/.config/mutt
 map gfz cd ~/.config/zsh
 map gft cd ~/.config/tmux
 map gfl cd ~/.config/jesseduffield/lazygit/
-map gfd cd ~/prog/dwm/
-map gfs cd ~/prog/st/
+map gfd cd ~/dwm/
+map gfs cd ~/st/
 map gF cd ~/.sconfig
 map gs cd ~/scripts
 map ge cd /etc
@@ -408,8 +408,8 @@ copymap <LEFT>     j
 copymap <RIGHT>    l
 copymap <HOME>     gg
 copymap <END>      G
-map E move down=5
-map U move up=5
+map K move down=5
+map I move up=5
 #copymap <PAGEDOWN> <C-E>
 #copymap <PAGEUP>   <C-U>
 
@@ -436,7 +436,7 @@ map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.
 #map cW console bulkrename
 map a  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
-#map k  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
+map k  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
 
 map pp paste
 map po paste overwrite=True
@@ -478,9 +478,9 @@ map <C-f> fzf_select
 map f console scout -ftsea%space
 
 # Tabs
-map tu     tab_new
-map ti     tab_move 1
-map tn   tab_move -1
+map ti     tab_new
+map tl     tab_move 1
+map tj   tab_move -1
 map lq        tab_restore
 map tmi     tab_shift 1
 map tmn     tab_shift -1
@@ -554,12 +554,12 @@ copytmap <UP>       i
 copytmap <DOWN>     k
 copytmap <HOME>     gg
 copytmap <END>      G
-copytmap <PAGEDOWN> <C-E>
-copytmap <PAGEUP>   <C-U>
+copytmap <PAGEDOWN> <C-K>
+copytmap <PAGEUP>   <C-I>
 
 # Changing priority and deleting tasks
-tmap <C-E>      eval -q fm.ui.taskview.task_move(-1)
-tmap <C-U>      eval -q fm.ui.taskview.task_move(0)
+tmap <C-K>      eval -q fm.ui.taskview.task_move(-1)
+tmap <C-I>      eval -q fm.ui.taskview.task_move(0)
 tmap dd         eval -q fm.ui.taskview.task_remove()
 #tmap <pagedown> eval -q fm.ui.taskview.task_move(-1)
 #tmap <pageup>   eval -q fm.ui.taskview.task_move(0)
