csgo cfg update

--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -1,7 +1,7 @@
 cl_righthand 0
 net_graph 1
 rate 786432
-BindToggle "ALT" "cl_righthand"
+BindToggle "z" "cl_righthand"
 bind "x" "use weapon_c4; drop"
 bind "f" "+lookatweapon;r_cleardecals"
 bind "c" "+js"
