updated fcitx5 config

--- a/fcitx5/conf/classicui.conf
+++ b/fcitx5/conf/classicui.conf
@@ -5,4 +5,5 @@ PerScreenDPI=True
 Font="思源黑体 CN Medium 10"
 
 #Theme=fcitx5-dark-transparent
-Theme=Material-Color-Brown
+#Theme=Material-Color-Brown
+Theme=Psionics-Remix
