updated fcitx5 config

--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -20,6 +20,8 @@ PinyinInPreedit=False
 SecondCandidate=
 # Select 3rd Candidate
 ThirdCandidate=
+# Key to trigger quickphrase
+QuickPhraseKey=semicolon
 # Number of Sentence
 Number of sentence=2
 # Prompt long word length when input length over (0 for disable)
