--- a/fcitx5/config
+++ b/fcitx5/config
@@ -39,6 +39,9 @@ AltTriggerKeys=
 [Hotkey/NextCandidate]
 0=Tab
 
+[Hotkey/TogglePreedit]
+0=Control+Alt+P
+
 [Behavior]
 # Active By Default
 ActiveByDefault=False
