--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -1,9 +1,9 @@
+# Shuangpin Profile
+ShuangpinProfile=Ziranma
 # Page size
 PageSize=5
-# Prediction Size
-PredictionSize=10
-# Enable Prediction
-Prediction=False
+# Enable Spell
+SpellEnabled=True
 # Enable Emoji
 EmojiEnabled=True
 # Enable Chaizi
@@ -16,6 +16,10 @@ CloudPinyinIndex=2
 PreeditInApplication=True
 # Show complete pinyin in preedit
 PinyinInPreedit=False
+# Enable Prediction
+Prediction=False
+# Prediction Size
+PredictionSize=10
 # Select 2nd Candidate
 SecondCandidate=
 # Select 3rd Candidate
@@ -26,8 +30,6 @@ QuickPhraseKey=semicolon
 Number of sentence=2
 # Prompt long word length when input length over (0 for disable)
 LongWordLengthLimit=4
-# Shuangpin Profile
-ShuangpinProfile=Ziranma
 # FirstRun
 FirstRun=False
 
@@ -64,6 +66,8 @@ NG_GN=True
 Inner=True
 # Inner Segment for Short Pinyin (qie -> qi'e)
 InnerShort=True
+# Match partial finals (e -> en, eng, ei)
+PartialFinal=True
 # u <-> v
 V_U=False
 # an <-> ang
