--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -30,7 +30,7 @@ print_info() {
     # info "Song" song
     # [[ $player ]] && prin "Music Player" "$player"
     info "Local IP" local_ip
-    info "Public IP" public_ip
+    # info "Public IP" public_ip
     # info "Users" users
     #info "Locale" locale  # This only works on glibc systems.
 
