--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -298,7 +298,7 @@ alias travel     scout -aefklst
 
 # Basic
 map q quit
-map Q quitall
+map Q quit!
 map ; console
 map : console
 map V console shell nvim%space 
