commented default-path set of tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -214,7 +214,7 @@ run-shell ~/.config/tmux/extrakto/extrakto.tmux
 #set-option -g status-utf8 on
 #set -g status-left '#(rainbarf --battery --remaining --bolt --rgb)'
 
-set-option default-path "$PWD"
+# set-option default-path "$PWD"
 
 
 # EOF
