fcitx5 rime -> pinyin

--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -1,7 +1,7 @@
 # Shuangpin Profile
 ShuangpinProfile=Ziranma
 # Page size
-PageSize=5
+PageSize=7
 # Enable Spell
 SpellEnabled=True
 # Enable Emoji
@@ -13,30 +13,29 @@ CloudPinyinEnabled=True
 # Cloud Pinyin Index
 CloudPinyinIndex=2
 # Show preedit within application
-PreeditInApplication=False
+PreeditInApplication=True
 # Show complete pinyin in preedit
-PinyinInPreedit=False
+PinyinInPreedit=True
 # Enable Prediction
 Prediction=False
 # Prediction Size
 PredictionSize=10
+# Forget word
+ForgetWord=
 # Select 2nd Candidate
 SecondCandidate=
 # Select 3rd Candidate
 ThirdCandidate=
-# Key to trigger quickphrase
-QuickPhraseKey=semicolon
-# Use V to trigger quickphrase
-VAsQuickphrase=True
 # Number of Sentence
 Number of sentence=2
 # Prompt long word length when input length over (0 for disable)
 LongWordLengthLimit=4
+# Key to trigger quickphrase
+QuickPhraseKey=semicolon
+# Use V to trigger quickphrase
+VAsQuickphrase=True
 # FirstRun
 FirstRun=False
-
-[ForgetWord]
-0=Control+7
 
 [PrevPage]
 0=minus
@@ -58,6 +57,18 @@ FirstRun=False
 
 [FilterByStroke]
 0=grave
+
+[QuickPhrase trigger]
+0=www.
+1=ftp.
+2=http:
+3=mail.
+4=bbs.
+5=forum.
+6=https:
+7=ftp:
+8=telnet:
+9=mailto:
 
 [Fuzzy]
 # ue -> ve
