--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -1,38 +1,38 @@
-# Shuangpin Profile
+# 双拼方案
 ShuangpinProfile=Ziranma
-# Page size
+# 页大小
 PageSize=7
-# Enable Spell
+# 启用拼写检查
 SpellEnabled=True
-# Enable Emoji
+# 启用颜文字
 EmojiEnabled=True
-# Enable Chaizi
+# 启用拆字
 ChaiziEnabled=True
-# Enable Cloud Pinyin
+# 启用云拼音
 CloudPinyinEnabled=True
-# Cloud Pinyin Index
+# 云拼音位置
 CloudPinyinIndex=2
-# Show preedit within application
+# 在程序中显示预编辑文本
 PreeditInApplication=True
-# Show complete pinyin in preedit
+# 在预编辑中显示完整拼音
 PinyinInPreedit=True
-# Enable Prediction
+# 启用预测
 Prediction=False
-# Prediction Size
+# 预测个数
 PredictionSize=10
-# Forget word
+# 忘记词汇
 ForgetWord=
-# Select 2nd Candidate
+# 选择第 2 个候选词
 SecondCandidate=
-# Select 3rd Candidate
+# 选择第 3 个候选词
 ThirdCandidate=
-# Number of Sentence
+# 句子数量
 Number of sentence=2
-# Prompt long word length when input length over (0 for disable)
+# 输入长于...时提示长词 (设置为 0 时禁用)
 LongWordLengthLimit=4
-# Key to trigger quickphrase
+# 快速输入的触发键
 QuickPhraseKey=semicolon
-# Use V to trigger quickphrase
+# 使用 V 来触发快速输入
 VAsQuickphrase=True
 # FirstRun
 FirstRun=False
@@ -75,11 +75,11 @@ FirstRun=False
 VE_UE=True
 # gn -> ng
 NG_GN=True
-# Inner Segment (xian -> xi'an)
+# 内模糊音节 (xian -> xi'an)
 Inner=True
-# Inner Segment for Short Pinyin (qie -> qi'e)
+# 短拼音的内模糊音节 (qie -> qi'e)
 InnerShort=True
-# Match partial finals (e -> en, eng, ei)
+# 匹配不完整的元音 (e -> en, eng, ei)
 PartialFinal=True
 # u <-> v
 V_U=False
