--- a/fcitx5/conf/classicui.conf
+++ b/fcitx5/conf/classicui.conf
@@ -1,9 +1,15 @@
+# 垂直候选列表
 Vertical Candidate List=False
-
+# 按屏幕 DPI 使用
 PerScreenDPI=True
-
-Font="思源黑体 CN Medium 10"
-
-#Theme=fcitx5-dark-transparent
+# 使用鼠标滚轮翻页
+WheelForPaging=True
+# 字体
+Font="HarmonyOS Sans 10"
+# 菜单字体
+MenuFont="Sans 10"
+# 使用输入法的语言来显示文字
+UseInputMethodLangaugeToDisplayText=True
+# 主题
 Theme=Material-Color-Brown
-#Theme=Psionics-Remix
+
