--- a/fcitx5/conf/classicui.conf
+++ b/fcitx5/conf/classicui.conf
@@ -5,9 +5,9 @@ PerScreenDPI=True
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # 字体
-Font="HarmonyOS Sans 10"
+Font="HarmonyOS Sans SC 10"
 # 菜单字体
-MenuFont="Sans 10"
+MenuFont="HarmonyOS Sans SC Medium 10"
 # 使用输入法的语言来显示文字
 UseInputMethodLangaugeToDisplayText=True
 # 主题
