--- a/fcitx5/conf/classicui.conf
+++ b/fcitx5/conf/classicui.conf
@@ -11,5 +11,5 @@ MenuFont="HarmonyOS Sans SC Medium 10"
 # 使用输入法的语言来显示文字
 UseInputMethodLangaugeToDisplayText=True
 # 主题
-Theme=Material-Color-Brown
+Theme=breeze
 
