--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -14,6 +14,8 @@ CloudPinyinEnabled=True
 CloudPinyinIndex=2
 # 在程序中显示预编辑文本
 PreeditInApplication=True
+# 固定嵌入预编辑文本光标在预编辑的开头
+PreeditCursorPositionAtBeginning=True
 # 在预编辑中显示完整拼音
 PinyinInPreedit=True
 # 启用预测
