--- a/fcitx5/conf/classicui.conf
+++ b/fcitx5/conf/classicui.conf
@@ -1,13 +1,13 @@
 # 垂直候选列表
 Vertical Candidate List=False
-# 按屏幕 DPI 使用
+# 按每个屏幕 DPI 显示
 PerScreenDPI=True
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # 字体
-Font="HarmonyOS Sans SC 10"
+Font="HarmonyOS Sans SC Medium 14"
 # 菜单字体
-MenuFont="HarmonyOS Sans SC Medium 10"
+MenuFont="HarmonyOS Sans SC Medium 14"
 # 使用输入法的语言来显示文字
 UseInputMethodLangaugeToDisplayText=True
 # 主题
