--- a/fcitx5/conf/classicui.conf
+++ b/fcitx5/conf/classicui.conf
@@ -5,9 +5,17 @@ PerScreenDPI=True
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # 字体
-Font="HarmonyOS Sans SC Medium 14"
+Font="MiSans Medium Medium 14"
 # 菜单字体
-MenuFont="HarmonyOS Sans SC Medium 14"
+MenuFont="MiSans Medium Medium 14"
+# 托盘字体
+TrayFont="MiSans Medium Medium 10"
+# 托盘标签轮廓颜色
+TrayOutlineColor=#000000
+# 托盘标签文本颜色
+TrayTextColor=#ffffff
+# 优先使用文字图标
+PreferTextIcon=False
 # 使用输入法的语言来显示文字
 UseInputMethodLangaugeToDisplayText=True
 # 主题
