--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -85,6 +85,8 @@ Inner=True
 InnerShort=True
 # 匹配不完整的元音 (e -> en, eng, ei)
 PartialFinal=True
+# 输入长度大于 4 时进行部分双拼匹配
+PartialSp=False
 # u <-> v
 V_U=False
 # an <-> ang
