--- a/picom.conf
+++ b/picom.conf
@@ -12,18 +12,18 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 5;
+shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -5;
+shadow-offset-x = -7;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -5;
+shadow-offset-y = -7;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -50,6 +50,9 @@ shadow-exclude = [
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
+
+# Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
+# clip-shadow-above = []
 
 # Specify a X geometry that describes the region in which shadow should not
 # be painted in, such as a dock window region. Use
@@ -81,7 +84,7 @@ fade-in-step = 0.03;
 fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-fade-delta = 4
+# fade-delta = 10
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
@@ -100,13 +103,13 @@ fade-delta = 4
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 1;
+inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
 frame-opacity = 0.7;
 
-# Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
+# Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
 inactive-opacity-override = false;
 
@@ -116,7 +119,7 @@ inactive-opacity-override = false;
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
 
-# Specify a list of conditions of windows that should always be considered focused.
+# Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
@@ -131,6 +134,22 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
+
+
+#################################
+#           Corners             #
+#################################
+
+# Sets the radius of rounded window corners. When > 0, the compositor will
+# round the corners of windows. Does not interact well with
+# `transparent-clipping`.
+corner-radius = 0
+
+# Exclude conditions for rounded corners.
+rounded-corners-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'"
+];
 
 
 #################################
@@ -161,7 +180,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-blur-background-fixed = false
+# blur-background-fixed = false
 
 
 # Specify the blur convolution kernel, with the following format:
@@ -183,6 +202,9 @@ blur-background-exclude = [
 #################################
 #       General Settings        #
 #################################
+
+# Enable remote control via D-Bus. See the man page for more details.
+# dbus = true
 
 # Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
 # daemon = false
@@ -216,17 +238,11 @@ mark-ovredir-focused = true;
 # detect-rounded-corners = false
 detect-rounded-corners = true;
 
-# Detect '_NET_WM_OPACITY' on client windows, useful for window managers
-# not passing '_NET_WM_OPACITY' of client windows to frame windows.
+# Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
+# not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
 #
 # detect-client-opacity = false
 detect-client-opacity = true;
-
-# Specify refresh rate of the screen. If not specified or 0, picom will
-# try detecting this with X RandR extension.
-#
-# refresh-rate = 60
-refresh-rate = 0;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
@@ -238,7 +254,7 @@ refresh-rate = 0;
 # to maximize performance for full-screen windows. Known to cause flickering
 # when redirecting/unredirecting windows.
 #
-unredir-if-possible = false
+# unredir-if-possible = false
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
@@ -253,11 +269,11 @@ unredir-if-possible = false
 detect-transient = true;
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
-# group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if
-# detect-transient is enabled, too.
+# group focused at the same time. This usually means windows from the same application
+# will be considered focused or unfocused at the same time.
+# 'WM_TRANSIENT_FOR' has higher priority if detect-transient is enabled, too.
 #
 # detect-client-leader = false
-detect-client-leader = true;
 
 # Resize damaged region by a specific number of pixels.
 # A positive value enlarges it while a negative one shrinks it.
@@ -348,13 +364,13 @@ log-level = "warn";
 # logs might still be written to the stderr.
 # When setting this option from the config file, it is recommended to use an absolute path.
 #
-# log-file = '/path/to/your/log/file'
+# log-file = "/path/to/your/log/file"
 
 # Show all X errors (for debugging)
 # show-all-xerrors = false
 
 # Write process ID to a file.
-# write-pid-path = '/path/to/your/log/file'
+# write-pid-path = "/path/to/your/log/file"
 
 # Window type settings
 #
@@ -380,6 +396,10 @@ log-level = "warn";
 #     normally won't be able to see. Useful when the window has parts of it
 #     transparent, and you want shadows in those areas.
 #
+#   clip-shadow-above:::
+#     Controls wether shadows that would have been drawn above the window should
+#     be clipped. Useful for dock windows that should have no shadow painted on top.
+#
 #   redir-ignore:::
 #     Controls whether this type of windows should cause screen to become
 #     redirected again after been unredirected. If you have unredir-if-possible
@@ -388,9 +408,9 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.85; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 1; }
+  popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
 };
