fcitx5 zh -> en

--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -1,42 +1,42 @@
-# 双拼方案
+# Shuangpin Profile
 ShuangpinProfile=Ziranma
-# 显示当前双拼模式
+# Show current shuangpin mode
 ShowShuangpinMode=True
-# 页大小
+# Page size
 PageSize=7
-# 启用拼写检查
+# Enable Spell
 SpellEnabled=True
-# 启用颜文字
+# Enable Emoji
 EmojiEnabled=True
-# 启用拆字
+# Enable Chaizi
 ChaiziEnabled=True
-# 启用云拼音
+# Enable Cloud Pinyin
 CloudPinyinEnabled=True
-# 云拼音位置
+# Cloud Pinyin Index
 CloudPinyinIndex=2
-# 在程序中显示预编辑文本
+# Show preedit within application
 PreeditInApplication=True
-# 固定嵌入预编辑文本光标在预编辑的开头
+# Fix embedded preedit cursor at the beginning of the preedit
 PreeditCursorPositionAtBeginning=True
-# 在预编辑中显示完整拼音
+# Show complete pinyin in preedit
 PinyinInPreedit=True
-# 启用预测
+# Enable Prediction
 Prediction=False
-# 预测个数
+# Prediction Size
 PredictionSize=10
-# 忘记词汇
+# Forget word
 ForgetWord=
-# 选择第 2 个候选词
+# Select 2nd Candidate
 SecondCandidate=
-# 选择第 3 个候选词
+# Select 3rd Candidate
 ThirdCandidate=
-# 句子数量
+# Number of Sentences
 Number of sentence=2
-# 输入长于...时提示长词 (设置为 0 时禁用)
+# Prompt long word length when input length over (0 for disable)
 LongWordLengthLimit=4
-# 快速输入的触发键
+# Key to trigger quickphrase
 QuickPhraseKey=semicolon
-# 使用 V 来触发快速输入
+# Use V to trigger quickphrase
 VAsQuickphrase=True
 # FirstRun
 FirstRun=False
@@ -79,13 +79,13 @@ FirstRun=False
 VE_UE=True
 # gn -> ng
 NG_GN=True
-# 内模糊音节 (xian -> xi'an)
+# Inner Segment (xian -> xi'an)
 Inner=True
-# 短拼音的内模糊音节 (qie -> qi'e)
+# Inner Segment for Short Pinyin (qie -> qi'e)
 InnerShort=True
-# 匹配不完整的元音 (e -> en, eng, ei)
+# Match partial finals (e -> en, eng, ei)
 PartialFinal=True
-# 输入长度大于 4 时进行部分双拼匹配
+# Match partial shuangpin if input length is longer than 4
 PartialSp=False
 # u <-> v
 V_U=False
