--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -30,6 +30,8 @@ ForgetWord=
 SecondCandidate=
 # Select 3rd Candidate
 ThirdCandidate=
+# Use Keypad as Selection key
+UseKeypadAsSelection=False
 # Number of Sentences
 Number of sentence=2
 # Prompt long word length when input length over (0 for disable)
