--- a/fcitx5/conf/classicui.conf
+++ b/fcitx5/conf/classicui.conf
@@ -1,23 +1,25 @@
-# 垂直候选列表
+# Vertical Candidate List
 Vertical Candidate List=False
-# 按每个屏幕 DPI 显示
+# Use Per Screen DPI
 PerScreenDPI=True
-# 使用鼠标滚轮翻页
+# Use mouse wheel to go to prev or next page
 WheelForPaging=True
-# 字体
-Font="MiSans Medium Medium 14"
-# 菜单字体
-MenuFont="MiSans Medium Medium 14"
-# 托盘字体
-TrayFont="MiSans Medium Medium 10"
-# 托盘标签轮廓颜色
+# Font
+Font="MiSans Medium 14"
+# Menu Font
+MenuFont="MiSans Medium 14"
+# Tray Font
+TrayFont="MiSans Medium 10"
+# Tray Label Outline Color
 TrayOutlineColor=#000000
-# 托盘标签文本颜色
+# Tray Label Text Color
 TrayTextColor=#ffffff
-# 优先使用文字图标
+# Prefer Text Icon
 PreferTextIcon=False
-# 使用输入法的语言来显示文字
+# Show Layout Name In Icon
+ShowLayoutNameInIcon=True
+# Use input method language to display text
 UseInputMethodLangaugeToDisplayText=True
-# 主题
-Theme=breeze
+# Theme
+Theme=breeze-translucent
 
