--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -79,7 +79,7 @@ FirstRun=False
 [Fuzzy]
 # ue -> ve
 VE_UE=True
-# gn -> ng
+# Common Typo
 NG_GN=True
 # Inner Segment (xian -> xi'an)
 Inner=True
