--- a/fcitx5/config
+++ b/fcitx5/config
@@ -1,9 +1,9 @@
 [Hotkey]
-# Enumerate when press trigger key repeatedly
+# 反复按切换键时进行轮换
 EnumerateWithTriggerKeys=True
-# Temporally switch between first and current Input Method
+# 临时在当前和第一个输入法之间切换
 AltTriggerKeys=
-# Skip first input method while enumerating
+# 轮换输入法时跳过第一个输入法
 EnumerateSkipFirst=False
 
 [Hotkey/TriggerKeys]
@@ -45,16 +45,26 @@ EnumerateSkipFirst=False
 0=Control+Alt+P
 
 [Behavior]
-# Active By Default
+# 默认状态为激活
 ActiveByDefault=False
-# Share Input State
+# 共享输入状态
 ShareInputState=No
-# Show Input Method Information when switch input method
+# 在程序中显示预编辑文本
+PreeditEnabledByDefault=True
+# 切换输入法时显示输入法信息
 ShowInputMethodInformation=True
-# Show Input Method Information when changing focus
+# 在焦点更改时显示输入法信息
 showInputMethodInformationWhenFocusIn=False
-# Default page size
+# 显示紧凑的输入法信息
+CompactInputMethodInformation=True
+# 显示第一个输入法的信息
+ShowFirstInputMethodInformation=True
+# 默认页大小
 DefaultPageSize=5
+# 覆盖 Xkb 选项
+OverrideXkbOption=False
+# 自定义 Xkb 选项
+CustomXkbOption=
 # Force Enabled Addons
 EnabledAddons=
 # Force Disabled Addons
