--- a/fcitx5/table/zrm.conf
+++ b/fcitx5/table/zrm.conf
@@ -1,69 +1,69 @@
 [Table]
-# 选择第二个候选词
+# Select Second Candidate
 SecondCandidate=
-# 选择第三个候选词
+# Select Third Candidate
 ThirdCandidate=
-# 页大小
+# Page size
 PageSize=7
-# 自动选择候选词之后提交
+# Commit after auto select candidates
 CommitAfterSelect=False
-# 取消激活输入法时提交输入缓冲区
+# Commit buffer when deactivating input method
 CommitWhenDeactivate=True
-# 提交无效分段
+# Commit Invalid Segment
 CommitInvalidSegment=False
-# 使用全角字符
+# Use full width
 UseFullWidth=True
-# 忽略内置标点
+# Ignore built in punctuation
 IgnorePunc=False
-# 将第一个候选词作为预编辑文本
+# First candidate as Preedit
 FirstCandidateAsPreedit=False
-# 固定嵌入预编辑文本光标在预编辑的开头
+# Fix embedded preedit cursor at the beginning of the preedit
 PreeditCursorPositionAtBeginning=True
-# 快速输入的触发键
+# Key to trigger quickphrase
 QuickPhraseKey=semicolon
-# 触发快速输入的文本
+# Text to trigger quickphrase
 QuickPhraseText=ABCDEFGHIJLKLMNOPQRSTUVWXYZ
-# 不对短于...的词排序
+# Don't sort word shorter than
 NoSortInputLength=0
-# 排序规则
+# Order policy
 OrderPolicy=Freq
-# 使用系统语言模型
+# Use system language model
 UseSystemLanguageModel=True
-# 根据当前上下文排序候选词
+# Sort candidates based on current context
 UseContextRelatedOrder=True
-# 模糊键
+# Wildcard matching Key
 MatchingKey=
-# 触发拼音的前缀键
+# Prefix key to trigger Pinyin
 PinyinKey=
-# 自动选择候选词
+# Auto select candidate
 AutoSelect=False
-# 选择唯一候选词的长度限制
+# Length limit of selecting the only candidate
 AutoSelectLength=-1
-# 选择唯一候选词的正则表达式
+# Regular expression for selecting the only candidate
 AutoSelectRegex=
-# 没有匹配时自动选择
+# Auto select when no match is found
 NoMatchAutoSelectLength=-1
-# 没有匹配时自动选择的正则表达式
+# Regular expression for auto select when no match is found
 NoMatchAutoSelectRegex=
-# 自动词组长度
+# Auto phrase length
 AutoPhraseLength=-1
-# 词组参与自组词
+# Learn auto phrase with phrase
 AutoPhraseWithPhrase=False
-# 候选词中自动组词的标记符号
+# Marker for auto phrase in the candidates
 MarkerForAutoPhrase=*
-# 在输入...次后保存自动组词
+# Save auto phrase after being typed for ... times
 SaveAutoPhraseAfter=-1
-# 精确匹配
-ExactMatch=True
-# 学习
+# Exact Match
+ExactMatch=False
+# Learning
 Learning=True
-# 显示词的提示
+# Display Hint for word
 Hint=True
-# 显示自定义提示
-DisplayCustomHint=True
-# 提示和候选词之间的分隔符文本
+# Display custom hint
+DisplayCustomHint=False
+# Separator text between hint and candidate
 HintSeparator= 
-# 候选词列表方向
+# Candidate List orientation
 CandidateLayoutHint="Not set"
 
 [Table/PrevPage]
