--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -10,6 +10,8 @@ SpellEnabled=True
 EmojiEnabled=True
 # Enable Chaizi
 ChaiziEnabled=True
+# Enable Characters in Unicode CJK Extension B
+ExtBEnabled=True
 # Enable Cloud Pinyin
 CloudPinyinEnabled=True
 # Cloud Pinyin Index
@@ -32,6 +34,8 @@ SecondCandidate=
 ThirdCandidate=
 # Use Keypad as Selection key
 UseKeypadAsSelection=False
+# Use BackSpace to cancel the selection
+BackSpaceToUnselect=True
 # Number of Sentences
 Number of sentence=2
 # Prompt long word length when input length over (0 for disable)
