--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -1,5 +1,5 @@
 # Shuangpin Profile
-ShuangpinProfile=Ziranma
+ShuangpinProfile=Xiaohe
 # Show current shuangpin mode
 ShowShuangpinMode=False
 # Page size
@@ -26,6 +26,8 @@ PinyinInPreedit=False
 Prediction=False
 # Prediction Size
 PredictionSize=10
+# Action when switching input method
+SwitchInputMethodBehavior="Commit current preedit"
 # Forget word
 ForgetWord=
 # Select 2nd Candidate
