--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,6 +5,7 @@ general {
 	col.active_border = rgba(ff81fcee) rgba(00ff99ee) 45deg
 	col.inactive_border = rgba(595959aa)
 	cursor_inactive_timeout = 30
+	no_cursor_warps = 1
 	resize_on_border = 1
 }
 
@@ -33,11 +34,16 @@ misc {
 	suppress_portal_warnings = 1
 }
 
-source = ~/.config/hypr/exec.conf
+master {
+	# no_gaps_when_only = 1
+}
+
+wsbind = 1, HDMI-A-1
+wsbind = 2, HDMI-A-1
+wsbind = 3, HDMI-A-1
+wsbind = 4, HDMI-A-1
+wsbind = 5, eDP1
+
 source = ~/.config/hypr/keys.conf
 source = ~/.config/hypr/monitors.conf
-
-workspace = HDMI-A-1, 1
-workspace = HDMI-A-1, 2
-workspace = HDMI-A-1, 3
-workspace = HDMI-A-1, 4
+source = ~/.config/hypr/exec.conf
