--- a/hypr/monitors.conf
+++ b/hypr/monitors.conf
@@ -1,2 +1,3 @@
 monitor = HDMI-A-1, 2560x1440, 0x0, 1
-monitor = eDP-1, 1920x1080, 2560x0, 1
+# monitor = eDP-1, 1920x1080, 2560x0, 1
+monitor = eDP-1, disable
