--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -38,12 +38,57 @@ master {
 	# no_gaps_when_only = 1
 }
 
-wsbind = 1, HDMI-A-1
-wsbind = 2, HDMI-A-1
-wsbind = 3, HDMI-A-1
-wsbind = 4, HDMI-A-1
-wsbind = 5, eDP1
 
-source = ~/.config/hypr/keys.conf
-source = ~/.config/hypr/monitors.conf
-source = ~/.config/hypr/exec.conf
+$Mod = SUPER
+
+binde = $Mod SHIFT, Q, killactive
+bind = $Mod CTRL ALT, Q, exit
+binde = , XF86AudioRaiseVolume, exec, amixer -qM set Master 5%+ umute
+binde = , XF86AudioLowerVolume, exec, amixer -qM set Master 5%- umute
+bind = , XF86AudioMute, exec, amixer set Master toggle
+
+bindm = $Mod, mouse:272, movewindow
+bindm = $Mod, mouse:273, resizewindow
+
+binde = $Mod, 1, workspace, 1
+binde = $Mod, 2, workspace, 2
+binde = $Mod, 3, workspace, 3
+binde = $Mod, 4, workspace, 4
+
+binde = $Mod SHIFT, 1, movetoworkspacesilent, 1
+binde = $Mod SHIFT, 2, movetoworkspacesilent, 2
+binde = $Mod SHIFT, 3, movetoworkspacesilent, 3
+binde = $Mod SHIFT, 4, movetoworkspacesilent, 4
+
+bind = $Mod, C, exec, firefox
+bind = $Mod, Return, exec, st
+bind = $Mod, slash, movetoworkspace, special
+bind = $Mod, apostrophe, togglespecialworkspace,
+
+layoutmsg {
+	binde = $Mod, U, cyclenext, prev
+	binde = $Mod, E, cyclenext,
+	binde = $Mod SHIFT, U, swapnext, prev
+	binde = $Mod SHIFT, E, swapnext,
+#	binde = $Mod, N, focusmaster,
+#	binde = $Mod SHIFT, N, swapwithmaster,
+}
+
+monitor = HDMI-A-1, 2560x1440, 0x0, 1
+# monitor = eDP-1, 1920x1080, 2560x0, 1
+monitor = eDP-1, disable
+
+exec-once = fcitx5
+exec-once = waybar
+
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 # gui authentication agent
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = hyprctl setcursor Bibata-Original-Ice 32
+
+env = QT_QPA_PLATFORMTHEME,qt6ct
+
+# no xwayland capture window while sharing the whole screen
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
