--- a/fcitx5/conf/pinyin.conf
+++ b/fcitx5/conf/pinyin.conf
@@ -16,8 +16,12 @@ ExtBEnabled=True
 CloudPinyinEnabled=True
 # Cloud Pinyin Index
 CloudPinyinIndex=2
-# Show preedit within application
-PreeditInApplication=True
+# Show animation when Cloud Pinyin is loading
+CloudPinyinAnimation=True
+# Always show Cloud Pinyin place holder
+KeepCloudPinyinPlaceHolder=False
+# Preedit Mode
+PreeditMode="Composing pinyin"
 # Fix embedded preedit cursor at the beginning of the preedit
 PreeditCursorPositionAtBeginning=True
 # Show complete pinyin in preedit
